--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "express": "^4.18.0",
     "mongoose": "^6.3.1",
     "nodemon": "^2.0.15"
+  },
+  "engines": {
+    "node": "14.15.3"
   }
 }
